--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yifei(Alex) Huang"
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   bio              : "CS Ph.D. student @ USC"
   location         : "Los Angeles, CA, USA"
   employer         :
