--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yifei Huang/Homepage"
 title_separator          : "-"
 name                     : &name "Yifei Huang"
 description              : &description "Ph.D. student @ USC"
-url                      : https://AlexHYF.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://www.yifei-h.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
